--- a/README
+++ b/README
@@ -1,1 +1,2 @@
-Developer School: the first exercise
+Assignment for Digital Design Developer School.
+The task is to solve the "eight queens" using an Objective C console application.
